tests/snapshots/scenarios_test__test_send_receive_same_port_client1_quic.snap
---
source: tests/scenarios_test.rs
description: "Ntp server not provided\nStarting filesystem writer\nLoading certificates from configuration directory\nListening on local_addr=127.0.0.1:12910 protocol=quic multicast_addr=None certificate_serial=10:2c:ee:a5:08:90:c0:2d:97:1c:f1:d1:25:14:38:57:a1:60:ea:a1 certificate_dns=testclient\nStarting writer protocol=quic\nStarting clipboard to protocol forwarder protocol_types=[Quic] groups=[\"default\"]\nCreate filesystem reader {\"/dev/stdin\": {\"default\"}}\nSend clipboard on startup path=/dev/stdin\nWatching for filesystem changes path=/dev/stdin\nStarting filesystem reader\nLoading certificates from configuration directory\nConnect local_addr=127.0.0.1:12910 remote_addr=127.0.0.1:12911 server_name=localhost\nNo cached session for DnsName(\"localhost\")\nNot resuming any session\ndrive; id=0\ndrive; id=0\ndrive; id=0\nUsing ciphersuite TLS13_AES_256_GCM_SHA384\nNot resuming\nTLS1.3 encrypted extensions: [ServerNameAck, TransportParameters([1, 4, 128, 0, 117, 48, 3, 2, 69, 192, 4, 8, 255, 255, 255, 255, 255, 255, 255, 255, 5, 4, 128, 19, 18, 208, 6, 4, 128, 19, 18, 208, 7, 4, 128, 19, 18, 208, 8, 2, 64, 100, 9, 2, 64, 100, 14, 1, 5, 64, 182, 0, 2, 16, 239, 31, 38, 251, 61, 248, 16, 227, 37, 236, 192, 158, 54, 136, 255, 133, 32, 4, 128, 0, 255, 255, 0, 20, 114, 108, 211, 52, 0, 52, 81, 247, 235, 54, 198, 155, 214, 54, 20, 108, 67, 17, 215, 159, 15, 8, 204, 177, 176, 12, 58, 65, 227, 212, 16, 8, 206, 225, 116, 231, 7, 7, 76, 194, 106, 178, 0, 192, 0, 0, 0, 255, 4, 222, 27, 2, 67, 232])]\nALPN protocol is None\nGot CertificateRequest CertificateRequestPayloadTls13 { context: , extensions: [SignatureAlgorithms([ECDSA_NISTP384_SHA384, ECDSA_NISTP256_SHA256, ED25519, RSA_PSS_SHA512, RSA_PSS_SHA384, RSA_PSS_SHA256, RSA_PKCS1_SHA512, RSA_PKCS1_SHA384, RSA_PKCS1_SHA256]), AuthorityNames([DistinguishedName(3022310b30090603550406130247423113301106035504030c0a74657374636c69656e74), DistinguishedName(3045310b30090603550406130241553113301106035504080c0a536f6d652d53746174653121301f060355040a0c18496e7465726e6574205769646769747320507479204c7464)])] }\nAttempting client auth\nSend stream data_size=61\ndrive; id=0\nNew stream available remote_addr=127.0.0.1:12911\ndrive; id=0\nReceive stream remote_addr=127.0.0.1:12911\ndrive; id=0\nMessage sent data_size=17 network_size=61 message_type=file\ndrive; id=0\ndrive; id=0\ndrive; id=0\ndrive; id=0\ndrive; id=0\nStream accepted\nStream finished reading\nValidate data identity=127.0.0.1\ndrive; id=0\nMessage received data_size=2000 group=default message_type=file\nReceive stream remote_addr=127.0.0.1:12911\nIgnore writing to stdin\n"
info:
  program: clipboard-sync
  args:
    - "--verbosity"
    - debug=simple
    - "--key"
    - "12345678912345678912345678912345"
    - "--bind-address"
    - "127.0.0.1:12910"
    - "--send-using-address"
    - "127.0.0.1:12910"
    - "--allowed-host"
    - "127.0.0.1:12911=localhost"
    - "--protocol"
    - quic
    - "--clipboard"
    - /dev/stdin
    - "--remote-certificates"
    - tests/certs/cert-verify/for-client
    - "--private-key"
    - tests/certs/testclient.key
    - "--certificate-chain"
    - tests/certs/testclient.crt
snapshot_kind: text
---
success: false
exit_code: -1
----- stdout -----

----- stderr -----
ALPN protocol is None
Attempting client auth
Connect local_addr=127.0.0.1:12910 remote_addr=127.0.0.1:12911 server_name=localhost
Create filesystem reader {"/dev/stdin": {"default"}}
Got CertificateRequest CertificateRequestPayloadTls13 { context: , extensions: [SignatureAlgorithms([ECDSA_NISTP384_SHA384, ECDSA_NISTP256_SHA256, ED25519, RSA_PSS_SHA512, RSA_PSS_SHA384, RSA_PSS_SHA256, RSA_PKCS1_SHA512, RSA_PKCS1_SHA384, RSA_PKCS1_SHA256]), AuthorityNames([DistinguishedName(3022310b30090603550406130247423113301106035504030c0a74657374636c69656e74), DistinguishedName(3045310b30090603550406130241553113301106035504080c0a536f6d652d53746174653121301f060355040a0c18496e7465726e6574205769646769747320507479204c7464)])] }
Ignore writing to stdin
Listening on local_addr=127.0.0.1:12910 protocol=quic multicast_addr=None certificate_serial=10:2c:ee:a5:08:90:c0:2d:97:1c:f1:d1:25:14:38:57:a1:60:ea:a1 certificate_dns=testclient
Loading certificates from configuration directory
Loading certificates from configuration directory
Message received data_size=2000 group=default message_type=file
Message sent data_size=17 network_size=61 message_type=file
New stream available remote_addr=127.0.0.1:12911
No cached session for DnsName("localhost")
Not resuming
Not resuming any session
Ntp server not provided
Receive stream remote_addr=127.0.0.1:12911
Receive stream remote_addr=127.0.0.1:12911
Send clipboard on startup path=/dev/stdin
Send stream data_size=61
Starting clipboard to protocol forwarder protocol_types=[Quic] groups=["default"]
Starting filesystem reader
Starting filesystem writer
Starting writer protocol=quic
Stream accepted
Stream finished reading
Using ciphersuite TLS13_AES_256_GCM_SHA384
Validate data identity=127.0.0.1
Watching for filesystem changes path=/dev/stdin
