tests/snapshots/scenarios_test__test_send_receive_same_port_client1_tcp.snap
---
source: tests/scenarios_test.rs
description: "Ntp server not provided\nStarting filesystem writer\nListening on local_addr=127.0.0.1:12910 protocol=tcp multicast_addr=None\nStarting writer protocol=tcp\nStarting clipboard to protocol forwarder protocol_types=[Tcp] groups=[\"default\"]\nCreate filesystem reader {\"/dev/stdin\": {\"default\"}}\nSend clipboard on startup path=/dev/stdin\nWatching for filesystem changes path=/dev/stdin\nStarting filesystem reader\nConnect local_addr=127.0.0.1:12910 remote_addr=127.0.0.1:12911 server_name=localhost\nWaiting for stream from remote_addr=127.0.0.1:12911\nTcp receive stream local_addr=127.0.0.1:12910 remote_addr=127.0.0.1:12911\nTcp send stream stream_size=77 remote_addr=127.0.0.1:12911\nMessage sent data_size=17 network_size=85 message_type=file\nReceived stream expected_size=2060\nValidate data identity=127.0.0.1\nMessage received data_size=2000 group=default message_type=file\nWaiting for stream from remote_addr=127.0.0.1:12911\nTcp receive stream local_addr=127.0.0.1:12910 remote_addr=127.0.0.1:12911\nIgnore writing to stdin\n"
info:
  program: clipboard-sync
  args:
    - "--verbosity"
    - debug=simple
    - "--key"
    - "12345678912345678912345678912345"
    - "--bind-address"
    - "127.0.0.1:12910"
    - "--send-using-address"
    - "127.0.0.1:12910"
    - "--allowed-host"
    - "127.0.0.1:12911=localhost"
    - "--protocol"
    - tcp
    - "--clipboard"
    - /dev/stdin
    - "--remote-certificates"
    - tests/certs/cert-verify/for-client
    - "--private-key"
    - tests/certs/testclient.key
    - "--certificate-chain"
    - tests/certs/testclient.crt
snapshot_kind: text
---
success: false
exit_code: -1
----- stdout -----

----- stderr -----
Connect local_addr=127.0.0.1:12910 remote_addr=127.0.0.1:12911 server_name=localhost
Create filesystem reader {"/dev/stdin": {"default"}}
Ignore writing to stdin
Listening on local_addr=127.0.0.1:12910 protocol=tcp multicast_addr=None
Message received data_size=2000 group=default message_type=file
Message sent data_size=17 network_size=85 message_type=file
Ntp server not provided
Received stream expected_size=2060
Send clipboard on startup path=/dev/stdin
Starting clipboard to protocol forwarder protocol_types=[Tcp] groups=["default"]
Starting filesystem reader
Starting filesystem writer
Starting writer protocol=tcp
Tcp receive stream local_addr=127.0.0.1:12910 remote_addr=127.0.0.1:12911
Tcp receive stream local_addr=127.0.0.1:12910 remote_addr=127.0.0.1:12911
Tcp send stream stream_size=77 remote_addr=127.0.0.1:12911
Validate data identity=127.0.0.1
Waiting for stream from remote_addr=127.0.0.1:12911
Waiting for stream from remote_addr=127.0.0.1:12911
Watching for filesystem changes path=/dev/stdin
