tests/snapshots/scenarios_test__test_send_receive_same_port_client2_quic.snap
---
source: tests/scenarios_test.rs
description: "Ntp server not provided\nStarting filesystem writer\nLoading certificates from configuration directory\nListening on local_addr=127.0.0.1:12911 protocol=quic multicast_addr=None certificate_serial=46:8d:f7:de:e1:27:f9:0d:06:c6:1f:ea:05:36:d8:2e:ad:69:09:35 certificate_dns=localhost\nNew connection remote_addr=127.0.0.1:12910\ndecided upon suite TLS13_AES_256_GCM_SHA384\ndrive; id=0\ndrive; id=0\ndrive; id=0\nNew stream available remote_addr=127.0.0.1:12910\nReceive stream remote_addr=127.0.0.1:12910\nStream accepted\nStream finished reading\ndrive; id=0\nValidate data identity=127.0.0.1\nMessage received data_size=17 group=default message_type=file\nReceive stream remote_addr=127.0.0.1:12910\nIgnore writing to stdin\ndrive; id=0\ndrive; id=0\ndrive; id=0\ndrive; id=0\nStarting writer protocol=quic\nStarting clipboard to protocol forwarder protocol_types=[Quic] groups=[\"default\"]\nCreate filesystem reader {\"/dev/stdin\": {\"default\"}}\nSend clipboard on startup path=/dev/stdin\nWatching for filesystem changes path=/dev/stdin\nStarting filesystem reader\nUsing existing connection local_addr=127.0.0.1:12911 remote_addr=127.0.0.1:12910 server_name=testclient\nSend stream data_size=2044\ndrive; id=0\ndrive; id=0\nMessage sent data_size=2000 network_size=2044 message_type=file\n"
info:
  program: clipboard-sync
  args:
    - "--verbosity"
    - debug=simple
    - "--key"
    - "12345678912345678912345678912345"
    - "--bind-address"
    - "127.0.0.1:12911"
    - "--send-using-address"
    - "127.0.0.1:12911"
    - "--clipboard"
    - /dev/stdin
    - "--allowed-host"
    - "127.0.0.1:12910=testclient"
    - "--protocol"
    - quic
    - "--remote-certificates"
    - tests/certs/cert-verify/for-server
    - "--private-key"
    - tests/certs/localhost.key
    - "--certificate-chain"
    - tests/certs/localhost.crt
snapshot_kind: text
---
success: false
exit_code: -1
----- stdout -----

----- stderr -----
Create filesystem reader {"/dev/stdin": {"default"}}
Ignore writing to stdin
Listening on local_addr=127.0.0.1:12911 protocol=quic multicast_addr=None certificate_serial=46:8d:f7:de:e1:27:f9:0d:06:c6:1f:ea:05:36:d8:2e:ad:69:09:35 certificate_dns=localhost
Loading certificates from configuration directory
Message received data_size=17 group=default message_type=file
Message sent data_size=2000 network_size=2044 message_type=file
New connection remote_addr=127.0.0.1:12910
New stream available remote_addr=127.0.0.1:12910
Ntp server not provided
Receive stream remote_addr=127.0.0.1:12910
Receive stream remote_addr=127.0.0.1:12910
Send clipboard on startup path=/dev/stdin
Send stream data_size=2044
Starting clipboard to protocol forwarder protocol_types=[Quic] groups=["default"]
Starting filesystem reader
Starting filesystem writer
Starting writer protocol=quic
Stream accepted
Stream finished reading
Using existing connection local_addr=127.0.0.1:12911 remote_addr=127.0.0.1:12910 server_name=testclient
Validate data identity=127.0.0.1
Watching for filesystem changes path=/dev/stdin
decided upon suite TLS13_AES_256_GCM_SHA384
