tests/snapshots/scenarios_test__test_send_receive_same_port_client_quic.snap
---
source: tests/scenarios_test.rs
info:
  program: clipboard-sync
  args:
    - "--verbosity"
    - debug=simple
    - "--key"
    - "12345678912345678912345678912345"
    - "--bind-address"
    - "127.0.0.1:12910"
    - "--send-using-address"
    - "127.0.0.1:12910"
    - "--allowed-host"
    - "127.0.0.1:12911=localhost"
    - "--protocol"
    - quic
    - "--clipboard"
    - /dev/stdin
    - "--remote-certificates"
    - tests/certs/cert-verify/for-client
    - "--private-key"
    - tests/certs/testclient.key
    - "--certificate-chain"
    - tests/certs/testclient.crt
snapshot_kind: text
---
success: false
exit_code: -1
----- stdout -----

----- stderr -----
Connect local_addr=127.0.0.1:12910 remote_addr=127.0.0.1:12911 server_name=localhost
Create filesystem reader {"/dev/stdin": {"default"}}
Ignore writing to stdin
Listening on local_addr=127.0.0.1:12910 protocol=quic
Loading certificates from configuration directory
Loading certificates from configuration directory
Message received data_size=2000 group=default message_type=file
Message sent data_size=17 network_size=84 message_type=file
New stream available remote_addr=127.0.0.1:12911
Ntp server not provided
Receive stream remote_addr=127.0.0.1:12911
Receive stream remote_addr=127.0.0.1:12911
Send clipboard on startup path=/dev/stdin
Send stream data_size=84
Starting clipboard to protocol forwarder protocol_types=[Quic] groups=["default"]
Starting filesystem reader
Starting filesystem writer
Starting writer protocol=quic
Stream accepted
Stream finished reading
Validate data identity=127.0.0.1
Watching for filesystem changes path=/dev/stdin
